Meu segundo deploy direto para AZR

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  
   <p align="center"><font size="8">Desculpe! <br>Estamos em manuten&ccedil&atildeo para atualiza&ccedil&otildees internas.<br> Por favor, aguarde.<br>
  
-  Obrigado pela compreens&atildeo.<br></font>
+  Obrigado pela compreens&atildeo<br></font>
  
   <br>
  
