--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-   <head><title>ADTALEM Brasil - Manutencao</title></head>
+   <head><title>ADTALEM Brasil - Manutencao.</title></head>
  
   <body topmargin="50" bgcolor="ffffff">
  
